src/tokenizer/ebnf_grammar.txt
EBNF Grammar:

PROGRAM ::= PLAYER MONSTER* DUNGEON+ 

MONSTER ::= “DEFINE” MONSTER_TYPE REFERENCE_NAME “{” HP ATK DEF PATH “}”

PLAYER ::= “DEFINE PLAYER” “{” HP ATK DEF “}”

DUNGEON ::= “DEFINE DUNGEON” REFERENCE_NAME POSITION “{“ START GOAL DUNGEON_OBJECT* “}”

DUNGEON_OBJECT ::= REFERENCE_MONSTER | COIN | DOOR | KEY | WALL | ITEM | SET | DELETE

REFERENCE_MONSTER ::= “MONSTER” REFERENCE_NAME POSITION “;”

ITEM ::= HP_MAX | ATK_MAX | DEF_MAX | HEAL_POT

MONSTER_TYPE  ::= “SLIME” | “SKELETON” | “BOSS”

HP ::= “HEALTH” NUM “;”

ATK ::= “ATTACK” NUM “;”

DEF ::= “DEFENCE” NUM “;”

POSITION ::= “(” NUM “,” NUM “)”

START ::= "START" POSITION “;”

GOAL ::= “GOAL” POSITION “;”

WALL ::= “WALL” POSITION “;”

HP_MAX ::= “HP_MAX” POSITION NUM “;”

ATK_MAX ::= “ATK_MAX” POSITION NUM “;”

DEF_MAX ::= “DEF_MAX” POSITION NUM “;”

HEAL_POT ::= “HEAL_POT” POSITION NUM “;”

COIN ::= “COIN” POSITION “;”

DOOR ::= “DOOR” COLOR POSITION “;”

KEY ::= “KEY” COLOR POSITION “;”

DELETE ::= "DELETE" POSITION “;”

SET ::= WALL_SET | COIN_SET | DELETE_SET

WALL_SET ::= “WALL” DIRECTION POSITION NUM “;”

COIN_SET ::= “COIN” DIRECTION POSITION NUM “;”

DELETE_SET ::= “DELETE” DIRECTION POSITION NUM “;”

PATH ::= “PATH” “[“ (DIRECTION (“,” DIRECTION )*)* ”]” 

DIRECTION ::= (LEFT | RIGHT | UP | DOWN) 

NUM ::= [0-9]+

REFERENCE_NAME ::= [A-Za-z0-9_ ]+   // Name can be combination of letters, numbers, _ or spaces

COLOR ::= “GREEN” | “BLUE” | “RED”
